2008-02-17 Marc Noirot <marc.noirot@gmail.com>
	* amf.c, amf.h, flvmeta.c: Cleaned up the AMF serializer/deserializer by
	  using a callback-based mechanism to make the code backend-independant.

2008-01-03 Marc Noirot <marc.noirot@gmail.com>
	* flvmeta.c (get_flv_info, write_flv): Data tags occuring before the first
	  audio or video tag were not written into the output file.
	
	* all source files: Fixed copyright strings.

	* flvmeta.c (compute_metadata): Fixed a date bug where the
	  daylight static variable obtained from tzset() was used
	  to compute UTC times.

2007-10-28 Marc Noirot <marc.noirot@gmail.com>
	* Added getopt_long support for the Windows build.
	* Removed the flvdump program. Its functionality
	  will be part of flvmeta.

2007-10-11 Marc Noirot <marc.noirot@gmail.com>
	* flvmeta.c (inject_metadata, write_flv): Do not use
	  memory mapping to write the output file.

2007-10-10 Marc Noirot <marc.noirot@gmail.com>
	* types.h, types.c: Transformed most conversion functions
	  into macros, to improve execution speed.

2007-10-07 Marc Noirot <marc.noirot@gmail.com>
	* amf.c (amf_data_decode, amf_data_encode):
	  Fixed missing break statements.
	
	* amf.c (amf_string_encode): Forgot to count
	  the string length prefix size.
	
	* flvmeta.c, mmap.h, mmap.c: Use memory mapping instead
	  of traditional buffered I/O. This should improve speed,
	  at the cost of a bigger memory usage.
	
	* Makefile.am, flvmeta.vcproj: Added mmap.c and mmap.h.
	
	* flvmeta.c (write_flv): Added tag body length sanity
	  check. An incorrect body length could trigger a memory
	  overflow, or a denial-of-service attack.

2007-09-30 Marc Noirot <marc.noirot@gmail.com>
	* configure.ac, config.h.win, types.h, types.c:
	  Fixed integer and float size checking, as well as endianness
	  checking. This fixes issues on 64-bits architectures.
	
	* flvdump.c (main): Fixed printf type specifiers.
	
	* flvmeta.c (get_flv_info): Fixed "times" metadata tag,